# bim-production-copilot

./: .gitignore  LICENSE  PUBLIC_RELEASE.md  README.md  pyproject.toml
config/: evidence-map.example.json  roles.example.json
docs/: INDEPENDENT_REVIEW_PROTOCOL.md
judge-ui/app/: globals.css  layout.tsx  page.tsx
judge-ui/public/: asset-provenance.json  demo-status.json
judge-ui/tests/: rendered-html.test.mjs
schemas/: independent-review.schema.json  promotion-manifest.schema.json  readiness-decision.schema.json  readiness-index.schema.json  regression-gate.schema.json  source-item.schema.json  work-package.schema.json
scripts/: audit_final_submission.py  audit_public_release.py  prepare_independent_review_packet.py  render_award_video.py  update_judge_ui_status.py  verify_independent_review_packet.py  version_source_item.py
src/bim_authority_gate/: __init__.py  authority.py  cli.py  engine.py  index.py  modeling.py  models.py  promotion.py  regression.py  work_package.py
src/bim_authority_gate/integrations/: __init__.py  drawing_evidence.py
tests/: conftest.py  test_authority.py  test_award_video.py  test_cli.py  test_context_restoration.py  test_drawing_evidence_integration.py  test_engine.py  test_final_submission_audit.py  test_index.py  test_judge_status_update.py  test_modeling.py  test_promotion.py  test_public_release_audit.py  test_regression.py  test_review_packet.py  test_work_package.py
